--- a/index.html
+++ b/index.html
@@ -230,11 +230,10 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="mb-2">Mail us to ask any question</h5>
-                            <h4 class="text-primary mb-0">info@workrunner.io</h4>
+                            <a href="mailto:info@workrunner.io" target="_blank"><u><h4 class="text-primary mb-0">info@workrunner.io</h4></u></a>
                         </div>
                     </div>
-                    <a href="quote.html" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Request
-                        A Quote</a>
+                         
                 </div>
                 <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
@@ -638,7 +637,7 @@
                                 </div>
                                 <div class="d-flex mb-2">
                                     <i class="bi bi-envelope-open text-primary me-2"></i>
-                                    <p class="mb-0">info@workrunner.io</p>
+                                    <a href="mailto:info@workrunner.io" target="_blank"><p class="mb-0 text-white">info@workrunner.io</p></a>
                                 </div>
                                 <div class="d-flex mb-2">
                                     <i class="bi bi-telephone text-primary me-2"></i>
