--- a/docs.html
+++ b/docs.html
@@ -57,8 +57,8 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" style="color: #061429" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link" style="color: #061429">Products</a>
-                    <a href="service.html" class="nav-item active nav-link" style="color: #061429">Docs</a>
+                    <a href="products.html" class="nav-item nav-link" style="color: #061429">Products</a>
+                    <a href="docs.html" class="nav-item active nav-link" >Docs</a>
                     <a href="service.html" class="nav-item nav-link" style="color: #061429">Technology</a>
                     <a href="contact.html" class="nav-item nav-link" style="color: #061429">Contact</a>
                 </div>
