--- a/products.html
+++ b/products.html
@@ -49,21 +49,21 @@
   <div class="container-fluid position-relative p-0">
     <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0 bg-special">
       <a href="index.html" class="navbar-brand p-0">
-        <img src="img/Workrunner.png" width="256" height="60" />
+          <img src="img/Workrunner.png" width="256" height="60">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-        <span class="fa fa-bars"></span>
+          <span class="fa fa-bars"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav ms-auto py-0">
-          <a href="index.html" class="nav-item nav-link active">Home</a>
-          <a href="about.html" class="nav-item nav-link" style="color: #061429">About</a>
-          <a href="service.html" class="nav-item nav-link" style="color: #061429">Services</a>
-
-          <a href="contact.html" class="nav-item nav-link" style="color: #061429">Contact</a>
-        </div>
+          <div class="navbar-nav ms-auto py-0">
+              <a href="index.html" class="nav-item nav-link " style="color: #061429;">Home</a>
+              <a href="products.html" class="nav-item nav-link active " >Products</a>
+              <a href="docs.html" class="nav-item nav-link " style="color: #061429;">Docs</a>
+              <a href="service.html" class="nav-item nav-link " style="color: #061429;">Technology</a>
+              <a href="contact.html" class="nav-item nav-link" style="color: #061429;">Contact</a>
+          </div>
       </div>
-    </nav>
+  </nav>
   </div>
   <br><br><br><br><br><br>
 
@@ -71,7 +71,7 @@
       text-align: center;">
     <h3>See what you can build with Workrunner</h3>
   </div>
-  <div style=" margin-right: 50px; margin-left: 50px;  padding: 20px;">
+  <div style=" margin-right: 50px; margin-left: 50px;  padding: 78px;">
     <p>
       Workrunner platform enables to manage very complicated processes such new product, new brand or new market
       development; current business continuity or existing product innovation. Processes involving multiple departments
