technology.html added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="products.html" class="nav-item nav-link " style="color: #061429;">Products</a>
                     <a href="docs.html" class="nav-item nav-link " style="color: #061429;">Docs</a>
-                    <a href="service.html" class="nav-item nav-link " style="color: #061429;">Technology</a>
+                    <a href="technology.html" class="nav-item nav-link " style="color: #061429;">Technology</a>
                     <a href="contact.html" class="nav-item nav-link" style="color: #061429;">Contact</a>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="mb-2">Mail us to ask any question</h5>
-                            <a href="mailto:info@workrunner.io" target="_blank"><u><h4 class="text-primary mb-0">info@workrunner.io</h4></u></a>
+                            <a href="mailto:info@workrunner.io" target="_blank"><h4 class="text-primary mb-0">info@workrunner.io</h4></a>
                         </div>
                     </div>
                          
@@ -340,7 +340,7 @@
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-                <h1 class="mb-0">Brands</h1>
+                <h1 class="mb-0">Refrences</h1>
             </div>
             <div class="row g-5">
                 <div class="col-lg-3 wow slideInUp" data-wow-delay="0.3s">
@@ -624,8 +624,8 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                <p class="mb-0">info@workrunner.io</p>
-              </div>
+                <a href="mailto:info@workrunner.io" target="_blank"><p class="text-white mb-0">info@workrunner.io</p></a>
+            </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-telephone text-primary me-2"></i>
                 <p class="mb-0">+012 345 67890</p>
