--- a/products.html
+++ b/products.html
@@ -125,7 +125,7 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                <p class="mb-0">info@workrunner.io</p>
+                <a href="mailto:info@workrunner.io" target="_blank"><p class="text-white mb-0">info@workrunner.io</p></a>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-telephone text-primary me-2"></i>
