--- a/docs.html
+++ b/docs.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
     <link rel="icon" href="img/icon.png" type="image/x-icon" />
-    <title>Workrunner-The Best low-code business application platform</title>
+    <title>Docs | Workrunner</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
@@ -59,7 +59,7 @@
                     <a href="index.html" style="color: #061429" class="nav-item nav-link">Home</a>
                     <a href="products.html" class="nav-item nav-link" style="color: #061429">Products</a>
                     <a href="docs.html" class="nav-item active nav-link" >Docs</a>
-                    <a href="service.html" class="nav-item nav-link" style="color: #061429">Technology</a>
+                    <a href="technology.html" class="nav-item nav-link" style="color: #061429">Technology</a>
                     <a href="contact.html" class="nav-item nav-link" style="color: #061429">Contact</a>
                 </div>
             </div>
@@ -131,9 +131,7 @@
                         </p>
                         <br />
                         <a target="_blank" href="https://workrunner.github.io/ug/user_guide/">
-                            <h5 class="text-primary">
-                                <u>Go to User's Guide</u>
-                            </h5>
+                            <button class="btn btn-primary w-100 fw-bold">Go to User's Guide</button>
                         </a>
                     </div>
                 </div>
@@ -150,13 +148,11 @@
                         </p>
                         <br />
                         <a target="_blank" href="https://workrunner.github.io/ag/admin_guide/">
-                            <h5 class="text-primary">
-                                <u>Go to Admin's Guide</u>
-                            </h5>
+                            <button class="btn btn-primary w-100 fw-bold">Go to Admin's Guide</button>
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 wow zoomIn " data-wow-delay="0.9s">
                     <div
                         class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                         <h4 class="mb-3">
@@ -167,9 +163,7 @@
                         <br />
                         <a target="_blank"
                             href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fwww.workrunner.io%2Fwp-content%2Fuploads%2F2021%2F09%2FWorkrunnerOktaIntegration.docx&wdOrigin=BROWSELINK">
-                            <h5 class="text-primary">
-                                <u>Go to OKTA Guide</u>
-                            </h5>
+                            <button class="btn btn-primary w-100 fw-bold">Go to OKTA Guide</button>
                         </a>
                     </div>
                 </div>
