--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
   <link rel="icon" href="img/icon.png" type="image/x-icon" />
-  <title>Workrunner-The Best low-code business application platform</title>
+  <title>Products | Workrunner</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="Free HTML Templates" name="keywords" />
   <meta content="Free HTML Templates" name="description" />
@@ -59,7 +59,7 @@
               <a href="index.html" class="nav-item nav-link " style="color: #061429;">Home</a>
               <a href="products.html" class="nav-item nav-link active " >Products</a>
               <a href="docs.html" class="nav-item nav-link " style="color: #061429;">Docs</a>
-              <a href="service.html" class="nav-item nav-link " style="color: #061429;">Technology</a>
+              <a href="technology.html" class="nav-item nav-link " style="color: #061429;">Technology</a>
               <a href="contact.html" class="nav-item nav-link" style="color: #061429;">Contact</a>
           </div>
       </div>
