--- a/technology.html
+++ b/technology.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
     <link rel="icon" href="img/icon.png" type="image/x-icon" />
-    <title>Workrunner-The Best low-code business application platform</title>
+    <title>Technology | Workrunner</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
@@ -58,7 +58,7 @@
                     <a href="index.html" style="color: #061429" class="nav-item nav-link">Home</a>
                     <a href="products.html" class="nav-item nav-link" style="color: #061429">Products</a>
                     <a href="docs.html" class="nav-item  nav-link" style="color: #061429" >Docs</a>
-                    <a href="service.html" class="nav-item nav-link active" >Technology</a>
+                    <a href="technology.html" class="nav-item nav-link active" >Technology</a>
                     <a href="contact.html" class="nav-item nav-link" style="color: #061429">Contact</a>
                 </div>
             </div>
