--- a/products.html
+++ b/products.html
@@ -49,21 +49,21 @@
   <div class="container-fluid position-relative p-0">
     <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0 bg-special">
       <a href="index.html" class="navbar-brand p-0">
-          <img src="img/Workrunner.png" width="256" height="60">
+        <img src="img/Workrunner.png" width="256" height="60">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-          <span class="fa fa-bars"></span>
+        <span class="fa fa-bars"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
-          <div class="navbar-nav ms-auto py-0">
-              <a href="index.html" class="nav-item nav-link " style="color: #061429;">Home</a>
-              <a href="products.html" class="nav-item nav-link active " >Products</a>
-              <a href="docs.html" class="nav-item nav-link " style="color: #061429;">Docs</a>
-              <a href="technology.html" class="nav-item nav-link " style="color: #061429;">Technology</a>
-              <a href="contact.html" class="nav-item nav-link" style="color: #061429;">Contact</a>
-          </div>
+        <div class="navbar-nav ms-auto py-0">
+          <a href="index.html" class="nav-item nav-link " style="color: #061429;">Home</a>
+          <a href="products.html" class="nav-item nav-link active ">Products</a>
+          <a href="docs.html" class="nav-item nav-link " style="color: #061429;">Docs</a>
+          <a href="technology.html" class="nav-item nav-link " style="color: #061429;">Technology</a>
+          <a href="contact.html" class="nav-item nav-link" style="color: #061429;">Contact</a>
+        </div>
       </div>
-  </nav>
+    </nav>
   </div>
   <br><br><br><br><br><br>
 
@@ -125,7 +125,9 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                <a href="mailto:info@workrunner.io" target="_blank"><p class="text-white mb-0">info@workrunner.io</p></a>
+                <a href="mailto:info@workrunner.io" target="_blank">
+                  <p class="text-white mb-0">info@workrunner.io</p>
+                </a>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-telephone text-primary me-2"></i>
@@ -135,11 +137,12 @@
                 <a class="btn btn-primary btn-square me-2" href="https://twitter.com/workrunner_io" target="_blank"><i
                     class="fab fa-twitter fw-normal"></i></a>
                 <!-- Facebook to Github-->
-                <a class="btn btn-primary btn-square me-2" href="https://twitter.com/workrunner_io" target="_blank"><i
-                    class="fab fa-facebook-f fw-normal"></i></a>
+                <a class="btn btn-primary btn-square me-2" href="https://github.com/workrunner" target="_blank"><i
+                    class="fab bi bi-github fw-normal"></i></a>
 
                 <!--instagram to Slack-->
-                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-instagram fw-normal"></i></a>
+                <a class="btn btn-primary btn-square me-2" href="https://workrunner.slack.com/"><i
+                    class="fab bi bi-slack fw-normal"></i></a>
 
                 <a class="btn btn-primary btn-square me-2" href="https://www.linkedin.com/company/workrunner/mycompany/"
                   target="_blank"><i class="fab fa-linkedin-in fw-normal"></i></a>
@@ -150,20 +153,28 @@
                 <h3 class="text-light mb-0">Quick Links</h3>
               </div>
               <div class="link-animated d-flex flex-column justify-content-start">
-                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About
-                  Us</a>
-                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our
-                  Services</a>
-                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Meet The
-                  Team</a>
-                <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest
-                  Blog</a>
-                <a class="text-light" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact
-                  Us</a>
+                <a class="text-light mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                <a class="text-light mb-2" href="products.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Products</a>
+                <a class="text-light mb-2" href="docs.html"><i class="bi bi-arrow-right text-primary me-2"></i>Docs</a>
+                <a class="text-light mb-2" href="technology.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Technology</a>
+                <a class="text-light" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact</a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+              <div class="section-title section-title-sm position-relative pb-3 mb-4">
+                <h3 class="text-light mb-0">Privacy and Terms</h3>
+              </div>
+              <div class="link-animated d-flex flex-column justify-content-start">
+                <a class="text-light mb-2" href="privacy.html"><i class="bi bi-arrow-right text-primary me-2"></i>Privacy</a>
+                <a class="text-light mb-2" href="terms.html"><i class="bi bi-arrow-right text-primary me-2"></i>Terms</a>
+                
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -171,17 +182,17 @@
   <div class="container-fluid text-white" style="background: #061429">
     <div class="container text-center">
       <div class="row justify-content-end">
-          <div class="d-flex align-items-center justify-content-center" style="height: 75px">
-            <p class="mb-0">
-              &copy;
-              <a class="text-white border-bottom" href="#">Workrunner Inc</a>.
-              All Rights Reserved.
+        <div class="d-flex align-items-center justify-content-center" style="height: 75px">
+          <p class="mb-0">
+            &copy;
+            <a class="text-white border-bottom" href="#">Workrunner Inc</a>.
+            All Rights Reserved.
 
-              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-              Designed by
-              <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-            </p>
-          </div>
+            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+            Designed by
+            <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
