--- a/products.html
+++ b/products.html
@@ -71,11 +71,13 @@
       text-align: center;">
     <h3>See what you can build with Workrunner</h3>
   </div>
-  <div style=" margin-right: 50px; margin-left: 50px;  padding: 78px;">
+  <div style=" margin-right: 50px; margin-left: 50px;  padding: 78px; text-align: center; ">
     <p>
       Workrunner platform enables to manage very complicated processes such new product, new brand or new market
-      development; current business continuity or existing product innovation. Processes involving multiple departments
-      or business units with hundreds of different tasks or separate steps can easily be managed with Workrunner
+      development; <br>
+      current business continuity or existing product innovation. Processes involving multiple departments
+      or business units with hundreds of different tasks 
+      or separate steps can easily be managed with Workrunner
     </p>
   </div>
 
