--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
                             <i class="fa fa-map-marker-alt text-white"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="mb-2">Visit our office</h5>
+                            <h5 class="mb-2">Corporate Headquarters</h5>
                             <h4 class="text-primary mb-0">Menlo Park, California, USA</h4>
                         </div>
                     </div>
