--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+    
     <!-- Spinner Start -->
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -169,6 +170,7 @@
                         <h5 class="fw-bold text-primary text-uppercase">What we do ...</h5>
                         <h1 class="mb-0">Manage business applications </h1>
                     </div>
+                    
                     <p class="mb-4">We create experiences that transform businesses and make people’s lives better.
                         <br><br>
 
@@ -216,13 +218,13 @@
     <!-- Features Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
+            <div class="text-center">
+                <h1 class="mb-0 text-nowrap">Manage all your business tasks from one place</h1>
+            </div>
             <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-
-                <h1 class="mb-0  ">Manage all your business tasks from one place</h1>
                 <br>
                 <h5 class="fw-bold text-primary ">We create experiences that transform businesses and make people’s
                     lives better.</h5>
-
             </div>
             <div class="row g-5">
                 <div class="col-lg-4">
