--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 
 
 
-
     <!-- Navbar & Carousel Start -->
     <div class="container-fluid position-relative p-0 ">
         <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0 bg-special">
@@ -312,10 +311,25 @@
             </div>
             <div class="row g-5"
                 style="text-align:  center; display: flex; justify-content: center; align-items: center;">
+
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" >
+                            <img class="" src="img/mcvities.png" >
+
+                        </div>
+                        <div class="text-center py-4">
+                            <h4 class="text-primary">McVitie's</h4>
+                            <p class="text-uppercase m-0">Food</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
+                    <div class="team-item bg-light rounded overflow-hidden">
+                        <div class="team-img position-relative overflow-hidden">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
@@ -327,7 +341,7 @@
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
@@ -339,7 +353,7 @@
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
@@ -351,19 +365,7 @@
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
-
-                        </div>
-                        <div class="text-center py-4">
-                            <h4 class="text-primary">McVitie's</h4>
-                            <p class="text-uppercase m-0">Food</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
-                    <div class="team-item bg-light rounded overflow-hidden">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
@@ -379,7 +381,7 @@
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
@@ -391,7 +393,7 @@
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
@@ -403,7 +405,7 @@
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
@@ -415,7 +417,7 @@
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
@@ -427,7 +429,7 @@
                 <div class="col-lg-2 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/mcvities.png" alt="">
+                            <img class="img-fluid w-100" src="img/backgroundRefrence.png" alt="">
 
                         </div>
                         <div class="text-center py-4">
