--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="img/icon.png" type="image/x-icon" />
     <title>Workrunner-The Best low-code business application platform</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
