php files added

--- a/index.html
+++ b/index.html
@@ -799,6 +799,8 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <form action="form-handler.php" method="POST">
+
 </body>
 
 </html>
