--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 
             <div class="row g-5">
                 <div class="col-lg-6 wow slideInUp" data-wow-delay="0.3s">
-                    <form action="https://formsubmit.co/406887fb56a9de3f37385e3a73dc328a" method="POST">
+                    <form action="https://formsubmit.co/hasanpekedis365@hotmail.com" method="POST">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <input type="text" name="name" class="form-control border-0 bg-light px-4" placeholder="Your Name"
