--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
     
-    <!-- Spinner Start -->
+    <!-- Spiner Start -->
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner"></div>
