--- a/index.html
+++ b/index.html
@@ -687,7 +687,9 @@
             <div class="row gx-5">
                 <div class="col-lg-4 col-md-6 footer-about" style="margin-bottom: 0px;">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 p-4">
-                        <img src="img/Workrunner.png" width="256" height="60" />
+                        <a href="index.html">
+                            <img src="img/Workrunner.png" width="256" height="60" />
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
